--- a/styles/styles.css
+++ b/styles/styles.css
@@ -269,7 +269,7 @@ img {
 }
 
 .button-secondary {
-  background-color: #82B3D3;
+  background-color: #82b3d3;
   color: #ffffff;
 }
 
@@ -279,7 +279,7 @@ img {
 
 .button-secondary:active {
   color: rgba(255, 255, 255, 0.3);
-  background-color: #82B3D3;
+  background-color: #82b3d3;
 }
 
 .button-selected {
@@ -407,7 +407,7 @@ main {
   grid-template-columns: 1fr 2fr;
   grid-column: 1 / -1;
   color: #ffffff;
-  background-color: #82B3D3;
+  background-color: #82b3d3;
 }
 
 .advantages-item-reversed {
@@ -508,8 +508,8 @@ main {
   gap: 30px;
   padding: 78px 85px;
   min-height: 385px;
-  background-color: #a1a0a0;
   box-sizing: border-box;
+  background-color: rgba(131, 179, 211, 0.12);
 }
 
 .service-item::before {
@@ -524,10 +524,6 @@ main {
 
 .service-item.light {
   background-color: #ffffff;
-}
-
-.service-item.dark {
-  background-color: #83B3D31F;
 }
 
 .service-item-hotel::before {
@@ -673,7 +669,7 @@ main {
   font-size: 18px;
   line-height: 24px;
   color: #000000;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border: none;
   border-radius: 4px 0 0 4px;
   box-sizing: border-box;
@@ -709,7 +705,7 @@ main {
   line-height: 36px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  background-color: #82B3D3;
+  background-color: #82b3d3;
   color: #ffffff;
   border-radius: 0 4px 4px 0;
 }
@@ -1207,7 +1203,7 @@ main {
 }
 
 .filter-button-apply {
-  background-color: #82B3D3;
+  background-color: #82b3d3;
   padding-inline: 16px;
 }
 
@@ -1434,7 +1430,7 @@ main {
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 }
 
 /* Pagination */
