--- a/styles/styles.css
+++ b/styles/styles.css
@@ -115,6 +115,7 @@ img {
 .navigation-list {
   display: flex;
   flex-wrap: wrap;
+  max-width: 550px;
   margin: 0;
   margin-right: auto;
   padding: 0;
@@ -320,11 +321,8 @@ img {
 
 /* Main */
 
-main {
-  flex-grow: 1;
-}
-
 .main-index {
+  flex-grow: 1;
   background-color: #ffffff;
   color: #000000;
 }
@@ -846,6 +844,7 @@ main {
 /* Catalog */
 
 .main-catalog {
+  flex-grow: 1;
   background-color: #ffffff;
   color: #333333;
 }
@@ -1094,7 +1093,7 @@ main {
   grid-column: 1 / 3;
   min-width: 143px;
   margin: 0;
-  padding-inline: 20px calc(100% - 70px);
+  padding-inline: 20px calc(100% - 90px);
   padding-block: 12px;
   box-sizing: border-box;
   font-family: inherit;
@@ -1275,7 +1274,9 @@ main {
 .catalog-view-list {
   grid-area: view;
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
+  max-width: 272px;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -1337,7 +1338,7 @@ main {
 .result-card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 212px 1fr repeat(3, auto);
+  grid-template-rows: auto 1fr repeat(3, auto);
   gap: 16px 20px;
   padding: 20px;
   background-color: #ffffff;
@@ -1364,6 +1365,7 @@ main {
 .card-image {
   display: block;
   width: 300px;
+  max-height: 212px;
 }
 
 .card-title {
