Исправляет замечания после первой проверки

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -137,6 +137,14 @@ img {
   overflow-wrap: break-word;
 }
 
+.navigation-link:hover, .navigation-link:focus-visible {
+  color: #756257;
+}
+
+.navigation-link:active {
+  color: rgba(117, 98, 87, 0.5);
+}
+
 .navigation-link:hover::after,
 .navigation-link[aria-current="page"]::after {
   content: "";
@@ -958,8 +966,9 @@ img {
 }
 
 .form-filter-group {
-  min-width: 150px;
-  max-width: 480px;
+  /* min-width: 150px; */
+  /* max-width: 480px; */
+  max-width: 150px;
   margin: 0;
   padding: 0;
   border: none;
@@ -969,6 +978,11 @@ img {
   margin-right: auto;
 }
 
+.form-filter-group:nth-child(3) {
+  min-width: 150px;
+  max-width: 480px;
+}
+
 .form-filter-list {
   display: flex;
   flex-direction: column;
@@ -976,6 +990,7 @@ img {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  overflow-wrap: break-word;
 }
 
 .form-filter-item {
