--- a/styles/styles.css
+++ b/styles/styles.css
@@ -504,6 +504,7 @@ img {
   grid-template-columns: repeat(3, 1fr);
   margin: 0;
   padding: 0;
+  align-items: center;
   text-align: center;
   list-style-type: none;
 }
